# SOLANA-API

./: Cargo.toml
src/: config.rs  error.rs  main.rs  routes.rs  types.rs  utils.rs
src/handlers/: account.rs  health.rs  keypair.rs  message.rs  mint.rs  mod.rs  send.rs  token.rs  transfer.rs
