[package]
name = "solana-http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = "1.0.1"
rand = "0.7"
bs58 = "0.4"
base64 = "0.21"
solana-program = "1.16"
spl-token = "4.0"