[package]
name = "solana-rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
bs58 = "0.5"
base64 = "0.21"
rand = "0.8"
thiserror = "1.0"
solana-program = "2.3.0"
rand_core = "0.5"
ed25519-dalek = "1.0.1"
solana-sdk = "1.18"
spl-token = "4.0"